--- a/formats/enlightenment_scottish_documentary_freedom_constraint_complete.html
+++ b/formats/enlightenment_scottish_documentary_freedom_constraint_complete.html
@@ -175,122 +175,11 @@
 <header id="title-block-header">
 <h1 class="title">The Constrained Light</h1>
 </header>
-<nav id="TOC" role="doc-toc">
-<ul>
-<li><a href="#chapter-1" id="toc-chapter-1"><strong>CHAPTER
-1</strong></a></li>
-<li><a href="#chapter-2" id="toc-chapter-2"><strong>CHAPTER
-2</strong></a></li>
-<li><a href="#chapter-3" id="toc-chapter-3"><strong>CHAPTER
-3</strong></a></li>
-<li><a href="#chapter-4" id="toc-chapter-4">Chapter 4</a>
-<ul>
-<li><a href="#chapter-4-1" id="toc-chapter-4-1"><strong>CHAPTER
-4</strong></a></li>
-</ul></li>
-<li><a href="#chapter-5" id="toc-chapter-5">Chapter 5</a>
-<ul>
-<li><a href="#chapter-5-1" id="toc-chapter-5-1"><strong>CHAPTER
-5</strong></a></li>
-</ul></li>
-<li><a href="#chapter-6" id="toc-chapter-6">Chapter 6</a>
-<ul>
-<li><a href="#chapter-6-1" id="toc-chapter-6-1"><strong>CHAPTER
-6</strong></a></li>
-</ul></li>
-<li><a href="#chapter-7" id="toc-chapter-7">Chapter 7</a>
-<ul>
-<li><a href="#chapter-7-1" id="toc-chapter-7-1"><strong>CHAPTER
-7</strong></a></li>
-</ul></li>
-<li><a href="#chapter-8" id="toc-chapter-8">Chapter 8</a>
-<ul>
-<li><a href="#chapter-8-1" id="toc-chapter-8-1"><strong>CHAPTER
-8</strong></a></li>
-</ul></li>
-<li><a href="#chapter-9" id="toc-chapter-9">Chapter 9</a>
-<ul>
-<li><a href="#chapter-9-1" id="toc-chapter-9-1"><strong>CHAPTER
-9</strong></a></li>
-</ul></li>
-<li><a href="#chapter-10" id="toc-chapter-10">Chapter 10</a>
-<ul>
-<li><a href="#chapter-10-1" id="toc-chapter-10-1"><strong>CHAPTER
-10</strong></a></li>
-</ul></li>
-<li><a href="#chapter-11" id="toc-chapter-11">Chapter 11</a>
-<ul>
-<li><a href="#chapter-11-1" id="toc-chapter-11-1"><strong>CHAPTER
-11</strong></a></li>
-</ul></li>
-<li><a href="#chapter-12" id="toc-chapter-12">Chapter 12</a>
-<ul>
-<li><a href="#final-chapter" id="toc-final-chapter"><strong>FINAL
-CHAPTER</strong></a></li>
-</ul></li>
-<li><a href="#chapter-13" id="toc-chapter-13">Chapter 13</a>
-<ul>
-<li><a href="#chapter-13-1" id="toc-chapter-13-1"><strong>CHAPTER
-13</strong></a></li>
-</ul></li>
-<li><a href="#chapter-14" id="toc-chapter-14">Chapter 14</a>
-<ul>
-<li><a href="#chapter-14-1" id="toc-chapter-14-1"><strong>CHAPTER
-14</strong></a></li>
-</ul></li>
-<li><a href="#chapter-15" id="toc-chapter-15">Chapter 15</a>
-<ul>
-<li><a href="#chapter-15-1" id="toc-chapter-15-1"><strong>CHAPTER
-15</strong></a></li>
-</ul></li>
-<li><a href="#chapter-16" id="toc-chapter-16">Chapter 16</a>
-<ul>
-<li><a href="#chapter-16-1" id="toc-chapter-16-1"><strong>CHAPTER
-16</strong></a></li>
-</ul></li>
-<li><a href="#chapter-17" id="toc-chapter-17">Chapter 17</a>
-<ul>
-<li><a href="#chapter-17-1" id="toc-chapter-17-1"><strong>CHAPTER
-17</strong></a></li>
-</ul></li>
-<li><a href="#chapter-18" id="toc-chapter-18">Chapter 18</a>
-<ul>
-<li><a href="#chapter-18-1" id="toc-chapter-18-1"><strong>CHAPTER
-18</strong></a></li>
-</ul></li>
-<li><a href="#chapter-19" id="toc-chapter-19">Chapter 19</a>
-<ul>
-<li><a href="#chapter-19-1" id="toc-chapter-19-1"><strong>CHAPTER
-19</strong></a></li>
-</ul></li>
-<li><a href="#chapter-20" id="toc-chapter-20">Chapter 20</a>
-<ul>
-<li><a href="#chapter-20-1" id="toc-chapter-20-1"><strong>CHAPTER
-20</strong></a></li>
-</ul></li>
-<li><a href="#chapter-21" id="toc-chapter-21">Chapter 21</a>
-<ul>
-<li><a href="#chapter-21-1" id="toc-chapter-21-1"><strong>CHAPTER
-21</strong></a></li>
-</ul></li>
-<li><a href="#chapter-22" id="toc-chapter-22">Chapter 22</a>
-<ul>
-<li><a href="#chapter-22-1" id="toc-chapter-22-1"><strong>CHAPTER
-22</strong></a></li>
-</ul></li>
-<li><a href="#chapter-23" id="toc-chapter-23">Chapter 23</a>
-<ul>
-<li><a href="#chapter-23-1" id="toc-chapter-23-1"><strong>CHAPTER
-23</strong></a></li>
-</ul></li>
-<li><a href="#chapter-24" id="toc-chapter-24">Chapter 24</a>
-<ul>
-<li><a href="#chapter-24-1" id="toc-chapter-24-1"><strong>CHAPTER
-24</strong></a></li>
-</ul></li>
-</ul>
-</nav>
-<h2 id="chapter-1"><strong>CHAPTER 1</strong></h2>
+<div style="text-align:center;margin-bottom:2em">
+<img src="cover.jpg" alt="Cover" style="max-width:400px"/>
+</div>
+<h1 id="chapter-1">Chapter 1</h1>
+<h2 id="chapter-1-1"><strong>CHAPTER 1</strong></h2>
 <p>The rain on the roof of the Transit was a flat, tinny rattle, a sound
 that had long since stopped being weather and had become a condition of
 existence. Inside, the air was thick with the smell of damp wool, stale
@@ -473,7 +362,8 @@ question asked of the dark, with no film to answer.</p>
 <p>I lowered the camera. The fire still burned. Someone, out there, was
 not contemplating a tether. They were lighting a fire in the rain.</p>
 <p>My assignment had just changed.</p>
-<h2 id="chapter-2"><strong>CHAPTER 2</strong></h2>
+<h1 id="chapter-2">Chapter 2</h1>
+<h2 id="chapter-2-1"><strong>CHAPTER 2</strong></h2>
 <p>Breakfast was silence and porridge. The porridge was perfect, a
 bland, creamy uniformity that admitted no variation, no lump of
 character. I ate at the Observers’ table, my sanctioned camera a small,
@@ -638,7 +528,8 @@ lost long enough.”</p>
 towards the sterile corridors, her final words followed me.</p>
 <p>“The narrative of progress, Documentarian. Sometimes progress is a
 drill going in, not a flower coming up.”</p>
-<h2 id="chapter-3"><strong>CHAPTER 3</strong></h2>
+<h1 id="chapter-3">Chapter 3</h1>
+<h2 id="chapter-3-1"><strong>CHAPTER 3</strong></h2>
 <p>The afternoon was a blur of sanctioned activity. I recorded a ‘Guided
 Nature Walk’ along a manicured path that followed the burn for exactly
 five hundred metres before turning back. The facilitator spoke of the
